tests/test_files/default/neg/bad_encoding1.s
	mov r1 pc
	restrict r1 Sealed 			; FAIL: attempt to restrict SCap with a WType
	halt
